// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxElement /> should not be checked 1`] = `
<DocumentFragment>
  .c0 {
  height: 16px;
  width: 16px;
}

.c2 {
  border: solid 2px #dbdbdb;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.c3 {
  position: absolute;
  left: -2px;
  height: calc(100% + 4px);
  top: -2px;
  -webkit-transition: background 200ms 0s ease-in-out;
  transition: background 200ms 0s ease-in-out;
  width: calc(100% + 4px);
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  position: relative;
}

.c4 > path {
  fill: transparent;
  stroke: #fff;
  stroke-width: 4px;
  stroke-dasharray: 36px;
  stroke-dashoffset: 36px;
  -webkit-transition: stroke-dashoffset 200ms 0s ease-in-out;
  transition: stroke-dashoffset 200ms 0s ease-in-out;
}

.c1 {
  position: relative;
}

.c1 .src-checkbox-container {
  border-radius: .125rem;
  -webkit-transition: border-color 200ms 0s ease-in-out;
  transition: border-color 200ms 0s ease-in-out;
  background: #dbdbdb;
}

.c1 .src-checkbox-rectangle {
  border-radius: .125rem;
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class="c2 src-checkbox-container"
    >
      <div
        class="c3 src-checkbox-rectangle"
      />
      <svg
        class="c4 src-checkbox-svg"
        viewBox="0 0 32 32"
      >
        <path
          d="M3.5,17.2l7.6,7.6L28.5,7.3"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CheckboxElement /> should render component 1`] = `
<DocumentFragment>
  .c0 {
  height: 16px;
  width: 16px;
}

.c2 {
  border: solid 2px #dbdbdb;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.c3 {
  position: absolute;
  left: -2px;
  height: calc(100% + 4px);
  top: -2px;
  -webkit-transition: background 200ms 0s ease-in-out;
  transition: background 200ms 0s ease-in-out;
  width: calc(100% + 4px);
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  position: relative;
}

.c4 > path {
  fill: transparent;
  stroke: #fff;
  stroke-width: 4px;
  stroke-dasharray: 36px;
  stroke-dashoffset: 36px;
  -webkit-transition: stroke-dashoffset 200ms 0s ease-in-out;
  transition: stroke-dashoffset 200ms 0s ease-in-out;
}

.c1 {
  position: relative;
}

.c1 .src-checkbox-container {
  border-radius: .125rem;
  -webkit-transition: border-color 200ms 0s ease-in-out;
  transition: border-color 200ms 0s ease-in-out;
  background: #dbdbdb;
}

.c1 .src-checkbox-rectangle {
  border-radius: .125rem;
}

.c1 .src-checkbox-container {
  border-color: #0665d0;
}

.c1 .src-checkbox-container .src-checkbox-rectangle {
  background: #0665d0;
}

.c1 .src-checkbox-container .src-checkbox-svg > path {
  stroke-dashoffset: 0;
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class="c2 src-checkbox-container"
    >
      <div
        class="c3 src-checkbox-rectangle"
      />
      <svg
        class="c4 src-checkbox-svg"
        viewBox="0 0 32 32"
      >
        <path
          d="M3.5,17.2l7.6,7.6L28.5,7.3"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CheckboxElement /> should render component outline 1`] = `
<DocumentFragment>
  .c0 {
  height: 16px;
  width: 16px;
}

.c2 {
  border: solid 2px #dbdbdb;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.c3 {
  position: absolute;
  left: -2px;
  height: calc(100% + 4px);
  top: -2px;
  -webkit-transition: background 200ms 0s ease-in-out;
  transition: background 200ms 0s ease-in-out;
  width: calc(100% + 4px);
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  position: relative;
}

.c4 > path {
  fill: transparent;
  stroke: #fff;
  stroke-width: 4px;
  stroke-dasharray: 36px;
  stroke-dashoffset: 36px;
  -webkit-transition: stroke-dashoffset 200ms 0s ease-in-out;
  transition: stroke-dashoffset 200ms 0s ease-in-out;
}

.c1 {
  position: relative;
}

.c1 .src-checkbox-container {
  border-radius: .125rem;
  -webkit-transition: border-color 200ms 0s ease-in-out;
  transition: border-color 200ms 0s ease-in-out;
}

.c1 .src-checkbox-rectangle {
  border-radius: .125rem;
}

.c1 .src-checkbox-container {
  border-color: #0665d0;
}

.c1 .src-checkbox-container .src-checkbox-rectangle {
  background: #0665d0;
}

.c1 .src-checkbox-container .src-checkbox-svg > path {
  stroke-dashoffset: 0;
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class="c2 src-checkbox-container"
    >
      <div
        class="c3 src-checkbox-rectangle"
      />
      <svg
        class="c4 src-checkbox-svg"
        viewBox="0 0 32 32"
      >
        <path
          d="M3.5,17.2l7.6,7.6L28.5,7.3"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CheckboxElement /> should render component with soft colors 1`] = `
<DocumentFragment>
  .c0 {
  height: 16px;
  width: 16px;
}

.c2 {
  border: solid 2px #dbdbdb;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.c3 {
  position: absolute;
  left: -2px;
  height: calc(100% + 4px);
  top: -2px;
  -webkit-transition: background 200ms 0s ease-in-out;
  transition: background 200ms 0s ease-in-out;
  width: calc(100% + 4px);
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  position: relative;
}

.c4 > path {
  fill: transparent;
  stroke: #fff;
  stroke-width: 4px;
  stroke-dasharray: 36px;
  stroke-dashoffset: 36px;
  -webkit-transition: stroke-dashoffset 200ms 0s ease-in-out;
  transition: stroke-dashoffset 200ms 0s ease-in-out;
}

.c1 {
  position: relative;
}

.c1 .src-checkbox-container {
  border-radius: .125rem;
  -webkit-transition: border-color 200ms 0s ease-in-out;
  transition: border-color 200ms 0s ease-in-out;
  background: #dbdbdb;
}

.c1 .src-checkbox-rectangle {
  border-radius: .125rem;
}

.c1 .src-checkbox-container {
  border-color: #cde0f5;
}

.c1 .src-checkbox-container .src-checkbox-rectangle {
  background: #cde0f5;
}

.c1 .src-checkbox-container .src-checkbox-svg > path {
  stroke-dashoffset: 0;
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class="c2 src-checkbox-container"
    >
      <div
        class="c3 src-checkbox-rectangle"
      />
      <svg
        class="c4 src-checkbox-svg"
        viewBox="0 0 32 32"
      >
        <path
          d="M3.5,17.2l7.6,7.6L28.5,7.3"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
